# simple-eigentrust

./: .gitignore  Cargo.toml  DEVELOPMENT.md  flake.nix
notebook/: eigentrust.ipynb
python/: .gitignore  Dockerfile  README.md  pyproject.toml
python/notebook/: community_finding.ipynb  eigentrust.ipynb  protocol_sim.ipynb
python/src/: server.py  sim_server.py
python/src/clique_sim/: protocol.py  simple.py  utils.py
python/src/simulator/: simulator.py
python/tests/: simulation.py
src/: io.rs  main.rs
