[project]
name = "clique-sim"
version = "0.1.0"
description = "Simulations for financial trust protocols on graphs"
authors = [
    {name = "Dmitry Mukhutdinov", email = "flyingleafe@gmail.com"},
]
dependencies = [
    "numpy>=1.21.2",
    "networkx>=3.2.1",
    "fastapi[all]>=0.109.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
clique-sim-server = "sim_server:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
